<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <TextView
        android:id="@+id/text_country"
        style="@style/TextView.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:gravity="center_horizontal"
        android:text="@string/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/icon_weather"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/spacing_large"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_country"
        app:layout_constraintVertical_bias="0.0"
        app:shapeAppearanceOverlay="@style/ShapeImage"
        tools:srcCompat="@drawable/image_weather" />

    <TextView
        android:id="@+id/text_weather_descriptions"
        style="@style/TextView.SemiLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_small"
        android:text="@string/weather_descriptions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/icon_weather"
        app:layout_constraintStart_toStartOf="@+id/icon_weather"
        app:layout_constraintTop_toBottomOf="@+id/icon_weather" />

    <TextView
        android:id="@+id/text_temperature"
        style="@style/TextView.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_extra_large"
        android:text="@string/temperature"
        app:layout_constraintBottom_toBottomOf="@+id/icon_weather"
        app:layout_constraintStart_toEndOf="@+id/icon_weather"
        app:layout_constraintTop_toTopOf="@+id/icon_weather" />

    <TextView
        android:id="@+id/text_wind"
        style="@style/TextView.small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:text="@string/wind"
        app:layout_constraintBottom_toBottomOf="@+id/text_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_temperature"
        app:layout_constraintTop_toBottomOf="@+id/text_country" />

    <TextView
        android:id="@+id/text_precip"
        style="@style/TextView.small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_extra_small"
        android:text="@string/precip"
        app:layout_constraintStart_toStartOf="@+id/text_wind"
        app:layout_constraintTop_toBottomOf="@+id/text_wind" />

    <TextView
        android:id="@+id/text_pressure"
        style="@style/TextView.small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_extra_small"
        android:text="@string/pressure"
        app:layout_constraintBottom_toBottomOf="@+id/icon_weather"
        app:layout_constraintStart_toStartOf="@+id/text_precip"
        app:layout_constraintTop_toBottomOf="@+id/text_precip"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>