<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view_no_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/no_internet" />

    <TextView
        android:id="@+id/text_view_try_again"
        style="@style/TextView.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/animation_view_no_connection"
        app:layout_constraintStart_toStartOf="@id/animation_view_no_connection"
        app:layout_constraintTop_toBottomOf="@id/animation_view_no_connection" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_item_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginVertical="@dimen/spacing_small"
        android:visibility="gone"
        app:cardBackgroundColor="@color/background"
        app:cardCornerRadius="@dimen/radius_default"
        app:cardMaxElevation="@dimen/elevation_extra_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_country"
                style="@style/TextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/country" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shape_image_view_weather"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="@dimen/spacing_extra_large"
                android:layout_marginBottom="@dimen/spacing_extra_large"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeImage"
                tools:srcCompact="@drawable/image_weather" />

            <TextView
                android:id="@+id/text_view_weather_descriptions"
                style="@style/TextView.SemiLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_small"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/spacing_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/shape_image_view_weather"
                app:layout_constraintStart_toStartOf="@+id/shape_image_view_weather"
                app:layout_constraintTop_toBottomOf="@+id/shape_image_view_weather"
                tools:text="@string/weather_descriptions" />


            <TextView
                android:id="@+id/text_view_temperature"
                style="@style/TextView.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_extra_large"
                app:layout_constraintBottom_toBottomOf="@+id/shape_image_view_weather"
                app:layout_constraintEnd_toEndOf="@+id/text_view_country"
                app:layout_constraintStart_toStartOf="@+id/text_view_country"
                app:layout_constraintTop_toTopOf="@+id/shape_image_view_weather"
                tools:text="@string/temperature" />

            <TextView
                android:id="@+id/text_view_wind"
                style="@style/TextView.small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_temperature"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_view_temperature"
                app:layout_constraintTop_toBottomOf="@+id/text_view_country"
                tools:text="@string/wind" />

            <TextView
                android:id="@+id/text_view_visibility"
                style="@style/TextView.small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_extra_small"
                app:layout_constraintStart_toStartOf="@+id/text_view_wind"
                app:layout_constraintTop_toBottomOf="@+id/text_view_wind"
                tools:text="@string/visibility" />

            <TextView
                android:id="@+id/text_view_pressure"
                style="@style/TextView.small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_extra_small"
                app:layout_constraintBottom_toBottomOf="@+id/shape_image_view_weather"
                app:layout_constraintStart_toStartOf="@+id/text_view_visibility"
                app:layout_constraintTop_toBottomOf="@+id/text_view_visibility"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/pressure" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_view_recommended_clothing"
        style="@style/TextView.SemiLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:text="@string/recommended_clothing"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/card_view_item_weather"
        app:layout_constraintStart_toStartOf="@+id/card_view_item_weather"
        app:layout_constraintTop_toBottomOf="@+id/card_view_item_weather" />

    <TextView
        android:id="@+id/text_view_tips"
        style="@style/TextView.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@drawable/shape_radius"
        android:lineSpacingExtra="@dimen/spacing_extra_small"
        android:padding="@dimen/spacing_medium"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_recommended_clothing"
        tools:text="@string/summerTipsOne" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_view_wardrobe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_large"
        android:visibility="gone"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_tips"
        tools:src="@drawable/shirt_three" />

    <ProgressBar
        android:id="@+id/progress_bar_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/on_primary_container"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_change_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/change"
        android:textAllCaps="false"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        android:visibility="gone"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>